--- a/src/app/component/configuration/configuration.component.html
+++ b/src/app/component/configuration/configuration.component.html
@@ -1,1 +1,107 @@
-<p>configuration works!</p>
+<div id="header" class="shadow rounded-0">
+    <div class="container">
+      <div class="row spacer-3"></div>
+      <div class="row align-items-center justify-content-between">
+        <div class="col-auto d-none d-sm-block">
+          <img src="../../assets/images/BodegaLucia002.png" class="object-fit-scale" alt="Logo de Bodega Lucia" style="height: 4rem;">
+        </div>
+        <div class="col col-auto">
+          <div class="display-6 fw-medium">Configuracion</div>
+        </div>
+        <div class="col col-auto">
+          <button type="menu" class="btn btn-outline-secondary"><i class="fa-solid fa-bars" style="width: 5rem;"></i></button>
+        </div>
+      </div>
+      <div class="row spacer-3"></div>
+    </div>
+  </div>
+
+<section id="configuration" class="d-block">  <!-- d-none / d-block -->
+    <div class="container">
+      <div class="spacer-6"></div>
+      <div class="row w-75 mx-auto">
+        <div class="row g-3 align-items-center">
+          <div class="col-2">
+            <div class="text-body-secondary">Usuario</div>
+          </div>
+          <div class="col-10">
+            <input type="text" class="form-control" placeholder="" aria-label="nombre del negocio">
+          </div>
+
+          <div class="col-2">
+            <div class="text-body-secondary">Contraseña</div>
+          </div>
+          <div class="col-5">
+            <div class="input-group">
+              <input type="password" class="form-control" placeholder="" aria-label="contraseña" aria-describedby="btn-show-password">
+              <button type="button" class="btn btn-outline-secondary" id="btn-show-password"><i class="fa-solid fa-eye"></i></button>
+            </div>
+          </div>
+          <div class="col-5">
+            <div class="input-group">
+              <input type="password" class="form-control" placeholder="Verificar contraseña" aria-label="contraseña" aria-describedby="btn-show-password-confirm">
+              <button type="button" class="btn btn-outline-secondary" id="btn-show-password-confirm"><i class="fa-solid fa-eye"></i></button>
+            </div>
+          </div>
+
+          <div class="col-2">
+            <div class="text-body-secondary">Tasa de interes</div>
+          </div>
+          <div class="col-6">
+            <div class="input-group">
+              <input type="number" class="form-control" placeholder="" aria-label="tasa de interes">
+            </div>
+          </div>
+          <div class="col-4">
+            <div class="input-group">
+              <select class="form-select" aria-label="seleccionar tipo de interes">
+                <option value="1">Interes simple</option>
+                <option value="2">Interes valor futuro</option>
+                <option value="3">Interes anualidad vencida</option>
+              </select>
+            </div>
+          </div>
+
+          <div class="col-3">
+            <div class="text-body-secondary">Tasa de interes moratoria</div>
+          </div>
+          <div class="col-5">
+            <div class="input-group">
+              <input type="number" class="form-control" placeholder="" aria-label="tasa de interes moratoria">
+            </div>
+          </div>
+          <div class="col-4">
+            <div class="input-group">
+              <select class="form-select" aria-label="seleccionar tipo de interes moratorio">
+                <option value="1">Interes simple</option>
+                <option value="2">Interes valor futuro</option>
+                <option value="3">Interes anualidad vencida</option>
+              </select>
+            </div>
+          </div>
+
+          <div class="col-2">
+            <div class="text-body-secondary">Limite de crédito</div>
+          </div>
+          <div class="col-4">
+            <div class="input-group">
+              <input type="number" class="form-control" placeholder="" aria-label="limite de credito">
+            </div>
+          </div>
+          
+          <div class="col-3 text-end">
+            <div class="text-body-secondary">Periodos de gracia</div>
+          </div>
+          <div class="col-3">
+            <div class="input-group">
+              <input type="number" class="form-control" placeholder="" aria-label="periodos de gracia">
+            </div>
+          </div>
+
+          <div class="col-12 text-center mt-4">
+            <button type="button" class="btn btn-warning">Guardar cambios</button>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
