--- a/src/app/component/customer-register/customer-register.component.html
+++ b/src/app/component/customer-register/customer-register.component.html
@@ -1,1 +1,45 @@
-<p>customer-register works!</p>
+<div id="header" class="shadow rounded-0">
+  <div class="container">
+    <div class="row spacer-3"></div>
+    <div class="row align-items-center justify-content-between">
+      <div class="col-auto d-none d-sm-block">
+        <img src="../../assets/images/BodegaLucia002.png" class="object-fit-scale" alt="Logo de Bodega Lucia" style="height: 4rem;">
+      </div>
+      <div class="col col-auto">
+        <div class="display-6 fw-medium">Bodega Lucia</div>
+      </div>
+      <div class="col col-auto">
+        <button type="menu" class="btn btn-outline-secondary"><i class="fa-solid fa-bars" style="width: 5rem;"></i></button>
+      </div>
+    </div>
+    <div class="row spacer-3"></div>
+  </div>
+</div>
+
+<section id="client-register" class="">
+  <div class="container">
+    <div class="row spacer-6"></div>
+    <div class="row w-75 mx-auto justify-content-center">
+      <div class="col-12 col-md-8">
+        <div class="row gy-4">
+          <div class="col-12">
+            <input type="text" class="form-control" placeholder="Nombre completo" aria-label="nombre completo" [(ngModel)]="new_customer.name">
+          </div>
+          <div class="col-12">
+            <input type="number" class="form-control" placeholder="Telefono" aria-label="telefono" [(ngModel)]="new_customer.phone">
+          </div>
+          <div class="col.12">
+            <input type="number" class="form-control" placeholder="DNI" aria-label="dni" [(ngModel)]="new_customer.dni">
+          </div>
+          <div class="col-12">
+            <input type="date" class="form-control" placeholder="Fecha de pago" aria-label="fecha de pago" [(ngModel)]="new_customer.payment_date">
+          </div>
+          <div class="col-12">
+            <button type="submit" class="btn btn-primary w-100" (click)="register_user()">Registrar</button>
+          </div>  
+        </div>
+      </div>
+    </div>
+    <div class="row spacer-3"></div>
+  </div>
+</section>
