--- a/src/app/component/configuration/configuration.component.html
+++ b/src/app/component/configuration/configuration.component.html
@@ -104,7 +104,7 @@
           </div>
 
           <div class="col-12 text-center mt-4">
-            <button type="submit" class="btn btn-primary w-100" (click)="configuration()">Guardar cambios</button>
+            <button type="submit" class="btn btn-warning" (click)="configuration()">Guardar cambios</button>
           </div>
         </div>
       </div>
