update: operation list html filed modified

--- a/src/app/component/operations-list/operations-list.component.html
+++ b/src/app/component/operations-list/operations-list.component.html
@@ -1,1 +1,146 @@
-<p>operations-list works!</p>
+<div id="header" class="shadow rounded-0">
+  <div class="container">
+    <div class="row spacer-3"></div>
+    <div class="row align-items-center justify-content-between">
+      <div class="col-auto d-none d-sm-block">
+        <img src="./images/BodegaLucia002.png" class="object-fit-scale" alt="Logo de Bodega Lucia" style="height: 4rem;">
+      </div>
+      <div class="col col-auto">
+        <div class="display-6 fw-medium">Header</div>
+      </div>
+      <div class="col col-auto">
+        <button type="menu" class="btn btn-outline-secondary"><i class="fa-solid fa-bars" style="width: 5rem;"></i></button>
+      </div>
+    </div>
+    <div class="row spacer-3"></div>
+  </div>
+</div>
+
+<section id="operation-list" class="">
+  <div class="spacer-4"></div>
+  <div class="container">
+    <div class="row g-3">
+      <div class="col-12 col-lg-6">
+        <div class="row g-3 align-items-center">
+          <div class="col-2">
+            <div class="text-body-secondary">Cliente:</div>
+          </div>
+          <div class="col-10">
+            <input type="text" class="form-control" aria-label="nombre de usuario" value="Andy García" readonly>
+          </div>
+          <div class="col-2">
+            <div class="text-body-secondary">Deuda:</div>
+          </div>
+          <div class="col-10">
+            <div class="input-group">
+              <span class="input-group-text">S/.</span>
+              <input type="number" class="form-control" aria-label="deuda de usuario" value="200" readonly>
+            </div>
+          </div>
+          <div class="col-6">
+            <div class="form-floating">
+              <input type="date" class="form-control" aria-label="fecha de inicio" value="2024-03-12" readonly>
+              <label>Fecha de inicio</label>
+            </div>
+          </div>
+          <div class="col-6">
+            <div class="form-floating">
+              <input type="date" class="form-control" aria-label="fecha de fin" value="2024-06-12" readonly>
+              <label>Fecha de fin</label>
+            </div>
+          </div>
+        </div>
+      </div>
+      
+      <div class="col-12 col-lg-6">
+        <div class="row align-items-center g-3">
+          <div class="col-4">
+            <div class="text-body-secondary">Siguiente pago:</div>
+          </div>
+          <div class="col-8">
+            <input type="date" class="form-control" aria-label="siguiente fecha de pago" value="2002-12-12" readonly>
+          </div>
+          <div class="col-4">
+            <div class="text-body-secondary">Tipo de crédito:</div>
+          </div>
+          <div class="col-8">
+            <input type="text" class="form-control" aria-label="tipo de credito aplicado al cliente" value="Anualidad simple" readonly>
+          </div>
+          <div class="col-4">
+            <div class="text-body-secondary">Monto del sgt. pago:</div>
+          </div>
+          <div class="col-8">
+            <div class="input-group">
+              <span class="input-group-text">S/.</span>
+              <input type="number" class="form-control" aria-label="siguiente monto de pago" value="30" readonly>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <div class="spacer-3"></div>
+
+    <div class="row">
+      <table class="table text-center">
+        <thead class="table-warning align-middle">
+          <tr>
+            <th scope="col" class="text-uppercase col-2">ID operación</th>
+            <th scope="col" class="text-uppercase col-2">Tipo de operación</th>
+            <th scope="col" class="text-uppercase col-1">Fecha</th>
+            <th scope="col" class="text-uppercase col-auto">Detalle</th>
+            <th scope="col" class="text-uppercase col-2">Monto total</th>
+          </tr>
+        </thead>
+        <tbody class="align-middle">
+          <tr>
+            <td>001</td>
+            <td>No se xd</td>
+            <td>15/04/2024</td>
+            <td class="text-start">Lorem ipsum dolor sit amet consectetur adipisicing elit. Expedita recusandae in quia laudantium fugit beatae corporis aspernatur nemo?</td>
+            <td>S/. 100</td>
+          </tr>
+          <tr>
+            <td>002</td>
+            <td>No se xd</td>
+            <td>15/04/2024</td>
+            <td class="text-start">Lorem ipsum dolor sit amet consectetur adipisicing elit. Expedita recusandae in quia laudantium fugit beatae corporis aspernatur nemo?</td>
+            <td>S/. 100</td>
+          </tr>
+          <tr>
+            <td>003</td>
+            <td>No se xd</td>
+            <td>15/04/2024</td>
+            <td class="text-start">Lorem ipsum dolor sit amet consectetur adipisicing elit. Expedita recusandae in quia laudantium fugit beatae corporis aspernatur nemo?</td>
+            <td>S/. 100</td>
+          </tr>
+          <tr>
+            <td>004</td>
+            <td>No se xd</td>
+            <td>15/04/2024</td>
+            <td class="text-start">Lorem ipsum dolor sit amet consectetur adipisicing elit. Expedita recusandae in quia laudantium fugit beatae corporis aspernatur nemo?</td>
+            <td>S/. 100</td>
+          </tr>
+          <tr>
+            <td>005</td>
+            <td>No se xd</td>
+            <td>15/04/2024</td>
+            <td class="text-start">Lorem ipsum dolor sit amet consectetur adipisicing elit. Expedita recusandae in quia laudantium fugit beatae corporis aspernatur nemo?</td>
+            <td>S/. 100</td>
+          </tr>
+          <tr>
+            <td>006</td>
+            <td>No se xd</td>
+            <td>15/04/2024</td>
+            <td class="text-start">Lorem ipsum dolor sit amet consectetur adipisicing elit. Expedita recusandae in quia laudantium fugit beatae corporis aspernatur nemo?</td>
+            <td>S/. 100</td>
+          </tr>
+          
+        </tbody>
+      </table>
+    </div>
+  </div>
+  <div class="container">
+
+  </div>
+</section>
