--- a/src/app/component/operations-list/operations-list.component.html
+++ b/src/app/component/operations-list/operations-list.component.html
@@ -3,7 +3,7 @@
     <div class="row spacer-3"></div>
     <div class="row align-items-center justify-content-between">
       <div class="col-auto d-none d-sm-block">
-        <img src="./images/BodegaLucia002.png" class="object-fit-scale" alt="Logo de Bodega Lucia" style="height: 4rem;">
+        <img src="../../assets/images/BodegaLucia002.png" class="object-fit-scale" alt="Logo de Bodega Lucia" style="height: 4rem;">
       </div>
       <div class="col col-auto">
         <div class="display-6 fw-medium">Header</div>
@@ -51,7 +51,7 @@
           </div>
         </div>
       </div>
-      
+
       <div class="col-12 col-lg-6">
         <div class="row align-items-center g-3">
           <div class="col-4">
@@ -81,66 +81,134 @@
 
     <div class="spacer-3"></div>
 
-    <div class="row">
-      <table class="table text-center">
-        <thead class="table-warning align-middle">
-          <tr>
-            <th scope="col" class="text-uppercase col-2">ID operación</th>
-            <th scope="col" class="text-uppercase col-2">Tipo de operación</th>
-            <th scope="col" class="text-uppercase col-1">Fecha</th>
-            <th scope="col" class="text-uppercase col-auto">Detalle</th>
-            <th scope="col" class="text-uppercase col-2">Monto total</th>
-          </tr>
-        </thead>
-        <tbody class="align-middle">
-          <tr>
-            <td>001</td>
-            <td>No se xd</td>
-            <td>15/04/2024</td>
-            <td class="text-start">Lorem ipsum dolor sit amet consectetur adipisicing elit. Expedita recusandae in quia laudantium fugit beatae corporis aspernatur nemo?</td>
-            <td>S/. 100</td>
-          </tr>
-          <tr>
-            <td>002</td>
-            <td>No se xd</td>
-            <td>15/04/2024</td>
-            <td class="text-start">Lorem ipsum dolor sit amet consectetur adipisicing elit. Expedita recusandae in quia laudantium fugit beatae corporis aspernatur nemo?</td>
-            <td>S/. 100</td>
-          </tr>
-          <tr>
-            <td>003</td>
-            <td>No se xd</td>
-            <td>15/04/2024</td>
-            <td class="text-start">Lorem ipsum dolor sit amet consectetur adipisicing elit. Expedita recusandae in quia laudantium fugit beatae corporis aspernatur nemo?</td>
-            <td>S/. 100</td>
-          </tr>
-          <tr>
-            <td>004</td>
-            <td>No se xd</td>
-            <td>15/04/2024</td>
-            <td class="text-start">Lorem ipsum dolor sit amet consectetur adipisicing elit. Expedita recusandae in quia laudantium fugit beatae corporis aspernatur nemo?</td>
-            <td>S/. 100</td>
-          </tr>
-          <tr>
-            <td>005</td>
-            <td>No se xd</td>
-            <td>15/04/2024</td>
-            <td class="text-start">Lorem ipsum dolor sit amet consectetur adipisicing elit. Expedita recusandae in quia laudantium fugit beatae corporis aspernatur nemo?</td>
-            <td>S/. 100</td>
-          </tr>
-          <tr>
-            <td>006</td>
-            <td>No se xd</td>
-            <td>15/04/2024</td>
-            <td class="text-start">Lorem ipsum dolor sit amet consectetur adipisicing elit. Expedita recusandae in quia laudantium fugit beatae corporis aspernatur nemo?</td>
-            <td>S/. 100</td>
-          </tr>
-          
-        </tbody>
-      </table>
+    <!---->
+    <div class="col-12">
+      <select class="form-select" [(ngModel)]="selectedOption" aria-label="seleccionar si registrar compra o registrar pago">
+        <option value="1">Compras</option>
+        <option value="2">Pagos</option>
+      </select>
     </div>
-  </div>
-  <div class="container">
+    <div class="spacer-3"></div>
+    <!---->
 
-  </div>
+    <!-- Tabla de Compras -->
+      <div *ngIf="selectedOption === '1'" class="col-12">
+        <table class="table text-center">
+          <thead class="table-warning align-middle">
+            <tr>
+              <th scope="col" class="text-uppercase col-1">ID operación</th>
+              <th scope="col" class="text-uppercase col-2">Fecha</th>
+              <th scope="col" class="text-uppercase col-2">Detalle</th>
+              <th scope="col" class="text-uppercase col-2">Monto total</th>
+            </tr>
+          </thead>
+          <tbody class="align-middle">
+            <tr>
+              <td>001</td>
+              <td>15/04/2024</td>
+              <td class="text-start">Lorem ipsum dolor sit amet consectetur adipisicing elit. Expedita recusandae in quia laudantium fugit beatae corporis aspernatur nemo?</td>
+              <td>S/. 100</td>
+            </tr>
+            <tr>
+              <td>002</td>
+              <td>15/04/2024</td>
+              <td class="text-start">Lorem ipsum dolor sit amet consectetur adipisicing elit. Expedita recusandae in quia laudantium fugit beatae corporis aspernatur nemo?</td>
+              <td>S/. 100</td>
+            </tr>
+            <tr>
+              <td>003</td>
+              <td>15/04/2024</td>
+              <td class="text-start">Lorem ipsum dolor sit amet consectetur adipisicing elit. Expedita recusandae in quia laudantium fugit beatae corporis aspernatur nemo?</td>
+              <td>S/. 100</td>
+            </tr>
+            <tr>
+              <td>004</td>
+              <td>15/04/2024</td>
+              <td class="text-start">Lorem ipsum dolor sit amet consectetur adipisicing elit. Expedita recusandae in quia laudantium fugit beatae corporis aspernatur nemo?</td>
+              <td>S/. 100</td>
+            </tr>
+            <tr>
+              <td>005</td>
+              <td>15/04/2024</td>
+              <td class="text-start">Lorem ipsum dolor sit amet consectetur adipisicing elit. Expedita recusandae in quia laudantium fugit beatae corporis aspernatur nemo?</td>
+              <td>S/. 100</td>
+            </tr>
+            <tr>
+              <td>006</td>
+              <td>15/04/2024</td>
+              <td class="text-start">Lorem ipsum dolor sit amet consectetur adipisicing elit. Expedita recusandae in quia laudantium fugit beatae corporis aspernatur nemo?</td>
+              <td>S/. 100</td>
+            </tr>
+
+          </tbody>
+        </table>
+      </div>
+
+    <!-- Tabla de Pagos -->
+      <div *ngIf="selectedOption === '2'" class="col-12">
+        <table class="table text-center">
+          <thead class="table-warning align-middle">
+            <tr>
+              <th scope="col" class="text-uppercase col-1">ID operación</th>
+              <th scope="col" class="text-uppercase col-2">Fecha</th>
+              <th scope="col" class="text-uppercase col-2">Interés</th>
+              <th scope="col" class="text-uppercase col-2">Amortización</th>
+            </tr>
+          </thead>
+          <tbody class="align-middle">
+            <tr>
+              <td>001</td>
+              <td>15/04/2024</td>
+              <td>S/. 100</td>
+              <td>S/. 100</td>
+            </tr>
+
+            <tr>
+              <td>002</td>
+              <td>15/04/2024</td>
+              <td>S/. 100</td>
+              <td>S/. 100</td>
+            </tr>
+            <tr>
+              <td>003</td>
+              <td>15/04/2024</td>
+              <td>S/. 100</td>
+              <td>S/. 100</td>
+            </tr>
+            <tr>
+              <td>004</td>
+              <td>15/04/2024</td>
+              <td>S/. 100</td>
+              <td>S/. 100</td>
+            </tr>
+            <tr>
+              <td>004</td>
+              <td>15/04/2024</td>
+              <td>S/. 100</td>
+              <td>S/. 100</td>
+            </tr>
+            <tr>
+              <td>004</td>
+              <td>15/04/2024</td>
+              <td>S/. 100</td>
+              <td>S/. 100</td>
+            </tr>
+            <tr>
+              <td>004</td>
+              <td>15/04/2024</td>
+              <td>S/. 100</td>
+              <td>S/. 100</td>
+            </tr>
+            <tr>
+              <td>004</td>
+              <td>15/04/2024</td>
+              <td>S/. 100</td>
+              <td>S/. 100</td>
+            </tr>
+
+          </tbody>
+        </table>
+      </div>
+    </div>
+  <div class="container"></div>
 </section>
