--- a/src/app/component/cash-register/cash-register.component.html
+++ b/src/app/component/cash-register/cash-register.component.html
@@ -40,85 +40,13 @@
                   </tr>
                 </thead>
                 <tbody>
-                  <tr *ngFor="let item of list_of_customers" [class.table-active]="item.id == selected_user_id" (click)="select_user(item.id)">
+                  <tr *ngFor="let item of list_of_customers" [class.table-active]="item.id == selected_customer.id" (click)="select_user(item.id)">
                     <td>{{item.id}}</td>
                     <td class="text-start">{{item.name}}</td>
                     <td>
                       <button type="button" class="btn btn-outline-secondary"><i class="fa-solid fa-up-right-from-square"></i></button>
                     </td>
                   </tr>
-<!--                   
-                  <tr>
-                    <td>001</td>
-                    <td class="text-start">Andy García</td>
-                    <td>
-                      <button type="button" class="btn btn-outline-secondary"><i class="fa-solid fa-up-right-from-square"></i></button>
-                    </td>
-                  </tr>
-                  <tr>
-                    <td>002</td>
-                    <td class="text-start">Jose Rojas</td>
-                    <td>
-                      <button type="button" class="btn btn-outline-secondary"><i class="fa-solid fa-up-right-from-square"></i></button>
-                    </td>
-                  </tr>
-                  <tr>
-                    <td>003</td>
-                    <td class="text-start">Arturo Armas</td>
-                    <td>
-                      <button type="button" class="btn btn-outline-secondary"><i class="fa-solid fa-up-right-from-square"></i></button>
-                    </td>
-                  </tr>
-                  <tr>
-                    <td>004</td>
-                    <td class="text-start">Francisca Gonzales</td>
-                    <td>
-                      <button type="button" class="btn btn-outline-secondary"><i class="fa-solid fa-up-right-from-square"></i></button>
-                    </td>
-                  </tr>
-                  <tr>
-                    <td>005</td>
-                    <td class="text-start">Sandra Neciosup</td>
-                    <td>
-                      <button type="button" class="btn btn-outline-secondary"><i class="fa-solid fa-up-right-from-square"></i></button>
-                    </td>
-                  </tr>
-                  <tr>
-                    <td>006</td>
-                    <td class="text-start">Armando Fuentes</td>
-                    <td>
-                      <button type="button" class="btn btn-outline-secondary"><i class="fa-solid fa-up-right-from-square"></i></button>
-                    </td>
-                  </tr>
-                  <tr>
-                    <td>007</td>
-                    <td class="text-start">Franco Ochoa</td>
-                    <td>
-                      <button type="button" class="btn btn-outline-secondary"><i class="fa-solid fa-up-right-from-square"></i></button>
-                    </td>
-                  </tr>
-                  <tr>
-                    <td>008</td>
-                    <td class="text-start">Andy Lazaro</td>
-                    <td>
-                      <button type="button" class="btn btn-outline-secondary"><i class="fa-solid fa-up-right-from-square"></i></button>
-                    </td>
-                  </tr>
-                  <tr>
-                    <td>009</td>
-                    <td class="text-start">Julio Mendoza</td>
-                    <td>
-                      <button type="button" class="btn btn-outline-secondary"><i class="fa-solid fa-up-right-from-square"></i></button>
-                    </td>
-                  </tr>
-                  <tr>
-                    <td>010</td>
-                    <td class="text-start">Jorge Luna</td>
-                    <td>
-                      <button type="button" class="btn btn-outline-secondary"><i class="fa-solid fa-up-right-from-square"></i></button>
-                    </td>
-                  </tr>
-                   -->
                 </tbody>
               </table>
             </div>
@@ -133,7 +61,7 @@
               <div class="text-body-secondary">Fecha de pago:</div>
             </div>
             <div class="col">
-              <input type="date" class="form-control" placeholder="" aria-label="fecha de pago">
+              <input type="date" class="form-control" placeholder="" aria-label="fecha de pago" [(ngModel)]="date_selected">
             </div>
             <div class="col-12">
               <select class="form-select" aria-label="seleccionar si registrar compra o registrar pago" [(ngModel)]="value_selection">
@@ -149,20 +77,20 @@
                   <input type="number" class="form-control" placeholder="Valor de compra" aria-label="valor de compra">
                 </div>
                 <div class="col-12">
-                  <select class="form-select" aria-label="seleccionar tipo de credito">
+                  <select class="form-select" aria-label="seleccionar tipo de credito" [(ngModel)]="payment_method">
                     <option value="1">Interes simple</option>
                     <option value="2">Interes valor futuro</option>
                     <option value="3">Interes anualidad vencida</option>
                   </select>
                 </div>
-                <div class="col-12">
+                <div class="col-12" [ngClass]="{'d-none': payment_method != 3}">
                   <input type="number" class="form-control" placeholder="Periodos de pago" aria-label="periodos de pago">
                 </div>
                 <div class="col-12">
                   <textarea class="form-control" placeholder="Descripción" rows="5"></textarea>
                 </div>
                 <div class="col-12">
-                  <button type="submit" class="btn btn-primary w-100">Registrar</button>
+                  <button type="submit" class="btn btn-primary w-100" (click)="register_purchase()">Registrar</button>
                 </div>
               </div>
             </div>
